--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <img src="images/icon-suvs.svg" alt="" />
           </div>
           <div class="content">
-            <h1>SUVs</h1>
+            <h1>SUVS</h1>
             <p>
               Take an SUV for its spacious interior, power, and versatility.
               Perfect for your next family vacation and off-road adventures.
